--- a/src/app/_components/public/testimonials/display-testimonials/display-testimonials.component.html
+++ b/src/app/_components/public/testimonials/display-testimonials/display-testimonials.component.html
@@ -2,8 +2,22 @@
   <li class="list__item" *ngFor="let testimonial of testimonials">
     <article class="testimonial">
       <h1 class="testimonial__author">{{ testimonial?.name }}</h1>
-      <h2 class="testimoial__location">{{ testimonial.location }}</h2>
-      <app-display-stars></app-display-stars>
+      <h2 class="testimoial__location">{{ testimonial?.location }}</h2>
+      <div>
+        <p class="sr">{{testimonial.stars}} stars out of {{testimonial.outOf}}</p>
+        <!-- <app-display-stars [stars]="testimonial?.stars" [outOf]="testimonial?.outOf"></app-display-stars> -->
+        <div class="star-rating">
+          <div class="star-rating__wrapper">
+            <!-- <div class="star-rating__bg" [appDisplayStars]="setPercentageWidth(testimonial?.stars, testimonial?.outOf)"></div> -->
+            <!-- {{percentage}} -->
+            <img src="assets/img/star.svg" alt="" class="star-rating__star">
+            <img src="assets/img/star.svg" alt="" class="star-rating__star">
+            <img src="assets/img/star.svg" alt="" class="star-rating__star">
+            <img src="assets/img/star.svg" alt="" class="star-rating__star">
+            <img src="assets/img/star.svg" alt="" class="star-rating__star">
+          </div>
+        </div>
+      </div>
       <p class="testimonial__body">
         {{ testimonial?.body }}
       </p>
