--- a/src/app/_components/shared/display-stars/display-stars.component.html
+++ b/src/app/_components/shared/display-stars/display-stars.component.html
@@ -1,7 +1,6 @@
 <div class="star-rating">
   <div class="star-rating__wrapper">
-    <div class="star-rating__bg"></div>
-    <!-- {{percentage}} -->
+    <div appDisplayStars class="star-rating__bg"></div>
     <img src="assets/img/star.svg" alt="" class="star-rating__star">
     <img src="assets/img/star.svg" alt="" class="star-rating__star">
     <img src="assets/img/star.svg" alt="" class="star-rating__star">
