--- a/src/app/_components/public/home/home.component.html
+++ b/src/app/_components/public/home/home.component.html
@@ -1,3 +1,12 @@
-<p>
-  home works!
-</p>
+<div>
+  <div>
+    <h1>Bristol Faster Drains</h1>
+    <h2>
+      <a href="tel:+">{{ info?.mainNumber }}</a></h2>
+    <h2>
+      <a href="tel:+">{{ info?.secondaryNumber }}</a>
+    </h2>
+  </div>
+  {{stars}}
+  <app-display-stars appDisplayStars [stars]="stars" [outOf]="outOf"></app-display-stars>
+</div>
