display stars home page

--- a/src/app/_components/public/home/home.component.html
+++ b/src/app/_components/public/home/home.component.html
@@ -7,6 +7,6 @@
       <a href="tel:+">{{ info?.secondaryNumber }}</a>
     </h2>
   </div>
-  {{stars}}
+  {{testimonials}}
   <app-display-stars appDisplayStars [stars]="stars" [outOf]="outOf"></app-display-stars>
 </div>
