Leave testimonial component started

--- a/src/app/_components/public/testimonials/testimonials/testimonials.component.html
+++ b/src/app/_components/public/testimonials/testimonials/testimonials.component.html
@@ -1,4 +1,5 @@
 <div class="page">
   <h1 class="page__title">Testimonials</h1>
+  <app-leave-testimonial></app-leave-testimonial>
   <app-display-testimonials></app-display-testimonials>
 </div>
