services page, started header, footer and nav styling

--- a/src/app/_components/admin/admin-nav/admin-nav.component.html
+++ b/src/app/_components/admin/admin-nav/admin-nav.component.html
@@ -3,5 +3,8 @@
     <li class="list__item">
       <a class="nav__link" [routerLink]="['/admin/company-info']">Company Info</a>
     </li>
+    <li class="list__item">
+      <a class="nav__link" [routerLink]="['/admin/verify-testimonials']">Verify Testimonials</a>
+    </li>
   </ul>
 </nav>
