--- a/src/app/_components/shared/header/header.component.html
+++ b/src/app/_components/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div>
-    <a [routerLink]="['']">
+    <a class="link" [routerLink]="['']">
       <h1 class="header__title">Bristol Faster Drains</h1>
     </a>
   </div>
@@ -12,5 +12,5 @@
       <h3>{{ info?.secondaryNumber }}</h3>
     </a>
   </div>
-  <app-nav></app-nav>
+  <app-nav class="nav nav--main"></app-nav>
 </header>
