--- a/src/scss/components/_list.scss
+++ b/src/scss/components/_list.scss
@@ -1,52 +1,42 @@
 // LISTS
 ///////////////////////////
-
 // Variables
 ///////////////////////////
-
-
 // Main
 ///////////////////////////
-
-.list {}
+.list {
+  list-style: none;
+}
 
 // Variants
 ///////////////////////////
-
-.list--nav {
-	list-style: none;
+.list--bullets {
+  list-style: initial;
 }
 
-.list--horizontal {
-	@include flex(column, space-around, center);
-	.list__item {
-		display: inline-block;
-		// float: left;
-	}
+.list--h {
+  @include flex(column, flex-start, center);
+  .list__item {
+    display: inline-block;
+  }
 }
 
 .list--services {
-	list-style: none;
-	display: flex;
-	flex-wrap: wrap;
-	height: 100%;
-	.list__item {
-		height: 50%;
-		width:33.33%;
-		float: left;
-	}
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  .list__item {
+    height: 50%;
+    width: 33.33%;
+    float: left;
+  }
 }
-
-
 
 // Media Queries
 ///////////////////////////
-
 @include media ($BP-Med) {
-	.list--horizontal {
-		@include flex(row, space-around, center);
-		.list__item {
-			display: inline-block;
-		}
-	}
+  .list--h {
+    @include flex(row, space-around, center);
+  }
 }
