--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -8,10 +8,14 @@
 // Main
 ///////////////////////////
 
-.nav {}
+.nav {
+	@include flex(column, flex-start);
+}
 
 .nav__link {
 	text-decoration: none;
+	font-family: $Font-Headings;
+	font-weight: $FontWeight-Bold;
 	&:hover {
 		text-decoration: underline;
 	}
@@ -19,7 +23,31 @@
 
 // Variants
 ///////////////////////////
-
+.nav--footer {
+	.nav__links {
+		display: flex;
+		flex-wrap: wrap;
+		.nav__item {
+			flex: 0 0 50%;
+			max-width: 50%;
+		}
+	}
+}
 
 // Media Queries
 ///////////////////////////
+@include media($BP-Med) {
+	.nav--footer {
+		width: 50%;
+	}
+}
+@include media($BP-Large) {
+	.nav--main {
+		.nav__links {
+			@include flex(row, space-around, center);
+		}
+	}
+	.nav--footer {
+		width: 25%;
+	}
+}
