--- a/src/app/_components/public/services/repairs/repairs.component.html
+++ b/src/app/_components/public/services/repairs/repairs.component.html
@@ -1,3 +1,13 @@
-<p>
-  repairs works!
-</p>
+<div class="page">
+  <div class="page__content">
+    <app-service-nav></app-service-nav>
+    <article class="article">
+      <h1 class="heading article__heading">Drain Repairs</h1>
+      <img class="article__img" src="./assets/img/repairs.jpg" alt="picture of a drain">
+      <p>After the engineer has assessed your requirements we will provide you with a full written quotation, outlining full costings and a schedule of works.</p>
+      <p>If our quotation is acceptable we will work with you to schedule in the works at the most convenient time. By arrangement weekend work can be carried out to least impact the effect on your working week.</p>
+      <p>If your drain has been found to have cracks or minor joint displacement (normally found after a CCTV Drain Survey has been carried out) as long as the drain has some integrity, we can offer no dig drain relining. This stops expensive and inconvenient excavation of the area. Instead a new liner can be inserted into the drain and adhered to the existing run. This is a much cheaper option than replacing the existing pipework.</p>
+      <h2><i>&#9742;</i> 01179 080116</h2>
+    </article>
+  </div>
+</div>
