--- a/src/app/_components/public/services/clearance/clearance.component.html
+++ b/src/app/_components/public/services/clearance/clearance.component.html
@@ -1,3 +1,14 @@
-<p>
-  clearance works!
-</p>
+<div class="page">
+  <div class="page__content">
+    <app-service-nav></app-service-nav>
+    <article class="article">
+      <h1 class="heading">Drain Clearance</h1>
+      <img class="article__img" src="assets/img/clearance.jpg" alt="picture of a high pressure nozzle used to clear drains">
+      <p>Bristol Faster Drains can offer both our domestic and commercial customers a full range of drainage services. Whether you need a one off emergency call out or are concerned about the general performance of your drains our experienced team of staff are here to help.</p>
+      <p>Our engineers can use a variety of methods, set to the jobs requirements to bring about the best and most cost effective solution to your drain problem.</p>
+      <p>We use both traditional drain rod’s or high pressure water jetting units in most cases to clear a standard blocked drain. When required we can utilise root cutting equipment or other types of jetting heads to clear your blockage</p>
+      <p>Our engineers will always keep you fully updated on the process of the drain clearance always advising if other additional works are required.</p>
+      <h2><i>&#9742;</i> 01179 080116</h2>
+    </article>
+  </div>
+</div>
