--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -3,6 +3,7 @@
 
 // Variables
 ///////////////////////////
+$NAV-Font:		$Font-Headings;
 
 
 // Main
@@ -14,7 +15,7 @@
 
 .nav__link {
 	text-decoration: none;
-	font-family: $Font-Headings;
+	font-family: $NAV-Font;
 	font-weight: $FontWeight-Bold;
 	&:hover {
 		text-decoration: underline;
@@ -49,5 +50,12 @@
 	
 	.nav--footer {
 		width: 25%;
+	}
+	
+	.nav--services {
+		@include padding-x($Type-LineHeight);
+		.nav__links {
+			justify-content: space-between;
+		}
 	}
 }
