--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -12,7 +12,8 @@ $Page-Padding:			$Type-LineHeight;
 ///////////////////////////
 
 .page {
-	height: $Page-MinHeight;
+	height: 100%;
+	min-height: $Page-MinHeight;
 	// display: flex;
 }
 
