--- a/src/app/_components/public/services/clearance/clearance.component.html
+++ b/src/app/_components/public/services/clearance/clearance.component.html
@@ -8,7 +8,7 @@
       <p>Our engineers can use a variety of methods, set to the jobs requirements to bring about the best and most cost effective solution to your drain problem.</p>
       <p>We use both traditional drain rod’s or high pressure water jetting units in most cases to clear a standard blocked drain. When required we can utilise root cutting equipment or other types of jetting heads to clear your blockage</p>
       <p>Our engineers will always keep you fully updated on the process of the drain clearance always advising if other additional works are required.</p>
-      <h2><i>&#9742;</i> 01179 080116</h2>
+      <app-phone-numbers></app-phone-numbers>
     </article>
   </div>
 </div>
