--- a/src/app/_components/shared/header/header.component.html
+++ b/src/app/_components/shared/header/header.component.html
@@ -4,13 +4,6 @@
       <h1 class="header__title">Bristol Faster Drains</h1>
     </a>
   </div>
-  <div>
-    <a href="tel:+">
-      <h2>{{ info?.mainNumber }}</h2>
-    </a>
-    <a href="tel:+">
-      <h3>{{ info?.secondaryNumber }}</h3>
-    </a>
-  </div>
+  <app-phone-numbers></app-phone-numbers>
   <app-nav class="nav nav--main"></app-nav>
 </header>
