--- a/src/app/_components/public/services/installation/installation.component.html
+++ b/src/app/_components/public/services/installation/installation.component.html
@@ -7,7 +7,9 @@
       <p>If you need a partial or complete drain installation then look no further. We offer a full service from initial site visit to written quotation and scheduling of works. We can help you plan the best way to route your drains and stop you falling foul of local building regulations. Our team of experienced engineers will help you fully through the process.</p>
       <p>If you are considering fitting a new en-suite or building an extension you will need to consider the best way of incorporating your existing drainage system with any new drainage requirements. We are able to use our drain tracing equipment to help you find the most cost effective solution to your new drain installation.</p>
       <p>We can also re-route drain if the cost of repairing your current drain exceeds the cost to have the drain re-run.</p>
-      <app-phone-numbers></app-phone-numbers>
     </article>
+    <div class="article__foot">
+      <app-phone-numbers></app-phone-numbers>
+    </div>
   </div>
 </div>
