--- a/src/app/_components/admin/admin-nav/admin-nav.component.html
+++ b/src/app/_components/admin/admin-nav/admin-nav.component.html
@@ -1,6 +1,9 @@
 <nav class="nav--admin">
   <ul class="list list--h nav__links">
     <li class="list__item">
+      <a class="nav__link" [routerLink]="['/admin/blog-admin']">Blog Admin</a>
+    </li>
+    <li class="list__item">
       <a class="nav__link" [routerLink]="['/admin/company-info']">Company Info</a>
     </li>
     <li class="list__item">
