started blog add component

--- a/src/app/_components/admin/blog/blog-admin/blog-admin.component.html
+++ b/src/app/_components/admin/blog/blog-admin/blog-admin.component.html
@@ -1,3 +1,5 @@
 <div class="page">
+  <app-admin-nav></app-admin-nav>
   <app-add-blog></app-add-blog>
+  <app-manage-blogs></app-manage-blogs>
 </div>
