--- a/src/app/_components/admin/blog/add-blog/add-blog.component.html
+++ b/src/app/_components/admin/blog/add-blog/add-blog.component.html
@@ -1,29 +1,27 @@
-<div class="page blog blog--admin">
-  <section class="blog__create">
-    <h2 class="page__subtitle">Create a new post</h2>
-    <form (submit)="createPost()" class="form form--blog">
-      <div class="form__row">
-        <div class="form__control">
-          <label for="image" class="form__label form__label--button">Add image</label>
-          <input type="file" name="image" id="image" class="form__input">
-        </div>
+<section class="blog__create">
+  <h2 class="page__subtitle">Create a new post</h2>
+  <form (submit)="createPost()" class="form form--blog">
+    <div class="form__row">
+      <div class="form__control">
+        <label for="image" class="form__label form__label--button">Add image</label>
+        <input type="file" name="image" id="image" class="form__input">
       </div>
-      <div class="form__row">
-        <div class="form__control">
-          <label for="location" class="form__label"></label>
-          <input type="text" name="location" id="location" class="form__input">
-        </div>
+    </div>
+    <div class="form__row">
+      <div class="form__control">
+        <label for="location" class="form__label"></label>
+        <input type="text" name="location" id="location" class="form__input">
       </div>
-      <div class="form__row">
-        <div class="form__control">
-          <label for="body" class="form__label"></label>
-          <textarea name="body" id="body" cols="30" rows="10" class="form__input form__input--textarea"></textarea>
-        </div>
+    </div>
+    <div class="form__row">
+      <div class="form__control">
+        <label for="body" class="form__label"></label>
+        <textarea name="body" id="body" cols="30" rows="10" class="form__input form__input--textarea"></textarea>
       </div>
-      <div class="form__row">
-        <input type="submit" value="">
-      </div>
-    </form>
-  </section>
-</div>
+    </div>
+    <div class="form__row">
+      <input type="submit" value="Add post">
+    </div>
+  </form>
+</section>
   
