--- a/src/app/_components/admin/blog/manage-blogs/manage-blogs.component.html
+++ b/src/app/_components/admin/blog/manage-blogs/manage-blogs.component.html
@@ -1,3 +1,9 @@
-<p>
-  manage-blogs works!
-</p>
+<section>
+  <div *ngIf="!blogs">
+    <h2>There are currently no posts</h2>
+    <button class="button button--primary">Create a new post</button>
+  </div>
+  <div *ngIf="blogs">
+    
+  </div>
+</section>
