--- a/src/app/_components/admin/blog/add-blog/add-blog.component.html
+++ b/src/app/_components/admin/blog/add-blog/add-blog.component.html
@@ -4,7 +4,12 @@
     <div class="form__row">
       <div class="form__control">
         <label for="image" class="form__label form__label--button">Add image</label>
-        <input type="file" name="image" id="image" class="form__input">
+        <input type="file" 
+          name="image"
+          id="image"
+          class="form__input"
+          (change)="uploadImage($event)"
+        />
       </div>
     </div>
     <div class="form__row">
