--- a/src/app/_components/admin/blog/add-blog/add-blog.component.html
+++ b/src/app/_components/admin/blog/add-blog/add-blog.component.html
@@ -1,32 +1,64 @@
 <section class="blog__create">
-  <h2 class="page__subtitle">Create a new post</h2>
-  <form (submit)="createPost()" class="form form--blog">
-    <div class="form__row">
-      <div class="form__control">
-        <label for="image" class="form__label form__label--button">Add image</label>
-        <input type="file" 
-          name="image"
-          id="image"
-          class="form__input"
-          (change)="uploadImage($event)"
-        />
+  <div *ngIf="!loading">
+    <h2 class="page__subtitle">Create a new post</h2>
+    <form (submit)="createPost($event)" class="form form--blog">
+      <div class="form__row">
+        <div class="form__control">
+          <label for="title" class="form__label">Post Title</label>
+          <input type="text" name="title" id="title" class="form__input" [(ngModel)]="postTitle" #title="ngModel" placeholder="Post title">
+        </div>
       </div>
-    </div>
-    <div class="form__row">
-      <div class="form__control">
-        <label for="location" class="form__label"></label>
-        <input type="text" name="location" id="location" class="form__input">
+      <div class="form__row">
+        <div class="form__control">
+          <label for="image" class="form__label form__label--button">Add image</label>
+          <input type="file" 
+            name="image"
+            id="image"
+            class="form__input"
+            (change)="getImage($event)"
+          />
+        </div>
       </div>
-    </div>
-    <div class="form__row">
-      <div class="form__control">
-        <label for="body" class="form__label"></label>
-        <textarea name="body" id="body" cols="30" rows="10" class="form__input form__input--textarea"></textarea>
+      <!-- <div *ngIf="uploadPercentage | async ">
+          <p>{{uploadPercentage | async}}%</p>
+          <progress [value]="uploadPercentage | async" max="100"></progress>
+      </div> -->
+      <div class="form__image-preview"  *ngIf="imagePreview | async" >
+        
+        {{imagePreview | async}}
+        <img [src]="imagePreview | async" alt="">
       </div>
-    </div>
-    <div class="form__row">
-      <input type="submit" value="Add post">
-    </div>
-  </form>
+      <div class="form__row">
+        <div class="form__control">
+          <label for="imageTitle"></label>
+          <input type="text" name="imageTitle" id="imageTitle" class="form__input" [(ngModel)]="imageTitle" #imgTitle="ngModel" placeholder="Image title" >
+        </div>
+      </div>
+      <div class="form__row">
+        <div class="form__control">
+          <label for="altText" class="form__label">Image Alt Text</label>
+          <input type="text" name="altText" id="altText" class="form__input" [(ngModel)]="imageAlt" #imgAlt="ngModel" placeholder="Image alt text" >
+        </div>
+      </div>
+      <div class="form__row">
+        <div class="form__control">
+          <label for="location" class="form__label"></label>
+          <input type="text" name="location" id="location" class="form__input" [(ngModel)]="postLocation" #location="ngModel" placeholder="Post location" >
+        </div>
+      </div>
+      <div class="form__row">
+        <div class="form__control">
+          <label for="body" class="form__label"></label>
+          <textarea name="body" id="body" cols="30" rows="10" class="form__input form__input--textarea" [(ngModel)]="postBody" #body="ngModel" placeholder="Post body" ></textarea>
+        </div>
+      </div>
+      <div class="form__row">
+        <input type="submit" value="Add post">
+      </div>
+    </form>
+  </div>
+  <div *ngIf="loading"> 
+    <app-loader></app-loader>
+  </div>
 </section>
   
