display blog component

--- a/src/app/_components/admin/blog/manage-blogs/manage-blogs.component.html
+++ b/src/app/_components/admin/blog/manage-blogs/manage-blogs.component.html
@@ -3,7 +3,7 @@
     <h2>There are currently no posts</h2>
     <button class="button button--primary">Create a new post</button>
   </div>
-  <div *ngIf="blogs">
-    
-  </div>
+  <!-- <div *ngIf="blogs"> -->
+    <app-display-blogs></app-display-blogs>
+  <!-- </div> -->
 </section>
