--- a/src/app/_components/shared/nav/nav.component.html
+++ b/src/app/_components/shared/nav/nav.component.html
@@ -9,5 +9,8 @@
     <li class="list__item nav__item">
       <a class="nav__link" [routerLink]="['/contact']">Contact</a>
     </li>
+    <li class="list__item nav__item">
+        <a class="nav__link" [routerLink]="['/blog']">Blog</a>
+      </li>
   </ul>
 </nav>
