--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <main class="w">
   <router-outlet></router-outlet>
+  <app-policies></app-policies>
 </main>
 <app-footer></app-footer>
