--- a/src/app/_components/shared/nav/nav.component.html
+++ b/src/app/_components/shared/nav/nav.component.html
@@ -7,6 +7,9 @@
       <a class="nav__link" [routerLink]="['/testimonials']">Testimonials</a>
     </li>
     <li class="list__item nav__item">
+      <a class="nav__link" [routerLink]="['/tips']">Hints &amp; Tips</a>
+    </li>
+    <li class="list__item nav__item">
       <a class="nav__link" [routerLink]="['/contact']">Contact</a>
     </li>
     <li class="list__item nav__item">
