started auth components

--- a/src/app/_components/shared/footer/footer.component.html
+++ b/src/app/_components/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer class="footer">
   <app-nav class="nav nav--footer"></app-nav>
-  <a [routerLink]="['/admin']">Admin</a>
+  <a [routerLink]="['/login']">Admin Login</a>
 </footer>
