blog upload and delete with images

--- a/src/app/_components/admin/blog/manage-blogs/manage-blogs.component.html
+++ b/src/app/_components/admin/blog/manage-blogs/manage-blogs.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="blog">
   <div *ngIf="!blogs">
     <h2>There are currently no posts</h2>
     <button class="button button--primary">Create a new post</button>
