--- a/src/app/_components/shared/nav/nav.component.html
+++ b/src/app/_components/shared/nav/nav.component.html
@@ -13,7 +13,7 @@
       <a class="nav__link" [routerLink]="['/contact']">Contact</a>
     </li>
     <li class="list__item nav__item">
-      <a class="nav__link" [routerLink]="['/blog']">Blog</a>
+      <a class="nav__link" [routerLink]="['/blogs']">Blog</a>
     </li>
   </ul>
 </nav>
