--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<main class="w">
+<main class="w page">
   <router-outlet></router-outlet>
   <app-policies></app-policies>
 </main>
