--- a/src/app/_components/public/contact/contact.component.html
+++ b/src/app/_components/public/contact/contact.component.html
@@ -1,19 +1,21 @@
-<div class="page">
-  <h1 class="page__heading">Get in touch</h1>
-  <div class="phone">
-    <a href="tel:+" class="phone__num">
-      <h2>{{ info?.mainNumber }}</h2>
-    </a>
-    <a href="tel:+" class="phone__num" *ngIf="info?.secondaryNumber">
-      <h2>{{ info?.secondaryNumber }}</h2>
-    </a>
+<app-skewed-wrapper [full]="false">
+  <div class="item">
+      <h1 class="item__heading">Get in touch</h1>
+      <div class="phone">
+        <a href="tel:+" class="phone__num">
+          <h2>{{ info?.mainNumber }}</h2>
+        </a>
+        <a href="tel:+" class="phone__num" *ngIf="info?.secondaryNumber">
+          <h2>{{ info?.secondaryNumber }}</h2>
+        </a>
+      </div>
+      <div>
+        <p class="address">
+          {{ info?.addressLine1 }}<br />{{ info?.addressLine2 }}<br /><span *ngIf="info?.addressLine3">{{ info?.addressLine3 }}<br /></span>{{ info?.city }}<br />{{ info?.postcode }}<br />
+        </p>
+      </div>
+      <div *ngIf="info?.email">
+        <a href="mailto:{{ info?.email }}">{{ info?.email }}</a>
+      </div>
   </div>
-  <div>
-    <p class="address">
-      {{ info?.addressLine1 }}<br />{{ info?.addressLine2 }}<br /><span *ngIf="info?.addressLine3">{{ info?.addressLine3 }}<br /></span>{{ info?.city }}<br />{{ info?.postcode }}<br />
-    </p>
-  </div>
-  <div *ngIf="info?.email">
-    <a href="mailto:{{ info?.email }}">{{ info?.email }}</a>
-  </div>
-</div>
+</app-skewed-wrapper>
