services page styling

--- a/src/app/_components/public/home/home.component.html
+++ b/src/app/_components/public/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="page home">
-  <app-skewed-wrapper [full]="true">
+  <app-skewed-wrapper [full]="false">
       <div class="item">
           <header class="item__header">
               <h1 class="item__title">Bristol Faster Drains</h1>
