--- a/src/app/_components/public/services/services/services.component.html
+++ b/src/app/_components/public/services/services/services.component.html
@@ -1,52 +1,57 @@
 <div class="page services">
   <ul class="list list--services">
-    <li class="list__item services__service skewed__container clearance">
-      <div class="skewed-bg skewed skewed--full bg-opaque">
-        <section class="skewed-bg__content service__info">
+
+    <li class="list__item services__service services__service--clearance">
+      <app-skewed-wrapper [full]="true">
+        <section class="service__info item">
           <h1 class="heading">Drain clearance</h1>
           <a class="btn btn--primary" [routerLink]="['/services/clearance']">Learn more</a>
         </section>
-      </div>
+      </app-skewed-wrapper>
     </li>
-    <li class="list__item services__service skewed__container cctv">
-      <div class="skewed-bg">
-        <section class="skewed-bg__content service__info">
+
+    <li class="list__item services__service services__service--cctv">
+      <app-skewed-wrapper [full]="true">
+        <section class="service__info item">
           <h1 class="heading">CCTV drain inspections</h1>
-          <a [routerLink]="['/services/cctv']">Learn more</a>
+          <a class="btn btn--primary" [routerLink]="['/services/cctv']">Learn more</a>
         </section>
-      </div>
+      </app-skewed-wrapper>
     </li>
-    <li class="list__item services__service skewed__container repairs">
-      <div class="skewed-bg">
-        <section class="skewed-bg__content service__info">
+
+    <li class="list__item services__service services__service--repairs">
+      <app-skewed-wrapper [full]="true">
+        <section class="service__info item">
           <h1 class="heading">Drain repairs</h1>
-          <a [routerLink]="['/services/repairs']">Learn more</a>
+          <a class="btn btn--primary" [routerLink]="['/services/repairs']">Learn more</a>
         </section>
-      </div>
+      </app-skewed-wrapper>
     </li>
-    <li class="list__item services__service skewed__container installation">
-      <div class="skewed-bg">
-        <section class="skewed-bg__content service__info">
-          <h1 class="heading">Drain installation</h1>
-          <a [routerLink]="['/services/installation']">Learn more</a>
-        </section>
-      </div>
-    </li>
-    <li class="list__item">
-      <div class="skewed-bg">
-        <section class="skewed-bg__content service__info">
+
+    <li class="list__item services__service services__service--tanker">
+      <app-skewed-wrapper [full]="true">
+        <section class="service__info item">
           <h1 class="heading">Tanker services</h1>
-          <a [routerLink]="['/services/tanker']">Learn more</a>
+          <a class="btn btn--primary" [routerLink]="['/services/tanker']">Learn more</a>
         </section>
-      </div>
+      </app-skewed-wrapper>
     </li>
-    <li class="list__item">
-      <div class="skewed-bg">
-        <section class="skewed-bg__content service__info">
-          <h1 class="heading">Contact us</h1>
-          <a [routerLink]="['/contact']">Learn more</a>
+
+    <li class="list__item services__service services__service--installation">
+      <app-skewed-wrapper [full]="true">
+        <section class="service__info item">
+          <h1 class="heading">Drain installation</h1>
+          <a class="btn btn--primary" [routerLink]="['/services/installation']">Learn more</a>
         </section>
-      </div>
+      </app-skewed-wrapper>
     </li>
+
+    <li class="list__item services__service services__service--contact">
+      <section class="service__info item">
+        <h1 class="heading">Contact us</h1>
+        <a [routerLink]="['/contact']">Learn more</a>
+      </section>
+    </li>
+
   </ul>
 </div>
