some header & blog styling

--- a/src/app/_components/shared/header/header.component.html
+++ b/src/app/_components/shared/header/header.component.html
@@ -1,9 +1,11 @@
 <header class="header">
-  <div>
-    <a class="link" [routerLink]="['']">
-      <h1 class="header__title">Bristol Faster Drains</h1>
-    </a>
+  <div class="header__top">
+    <div>
+      <a class="link" [routerLink]="['']">
+        <h1 class="header__title">Bristol Faster Drains</h1>
+      </a>
+    </div>
+    <app-phone-numbers></app-phone-numbers>
   </div>
-  <app-phone-numbers></app-phone-numbers>
   <app-nav class="nav nav--main"></app-nav>
 </header>
