--- a/src/app/_components/shared/blog/blog/blog.component.html
+++ b/src/app/_components/shared/blog/blog/blog.component.html
@@ -1,10 +1,10 @@
-<article class="blog">
+<article class="article">
   <div class="blog__wrapper">
-    <img [src]="blog?.imageURL" [alt]="blog?.imageAlt">
+    <img [src]="blog?.imageURL" [alt]="blog?.imageAlt" class="article__img">
     <div class="blog__content">
       <h1 class="blog__title">{{ blog?.title }}</h1>
       <p class="blog__body">{{ blog?.body }}</p>
-      <div class="blog__meta">
+      <div class="article__foot">
         <p><small>Posted on {{blog?.date | date: 'dd LLLL yyyy'}} in {{ blog?.location }}</small></p>
       </div>
       <!-- <div *ngIf="admin"> -->
