--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -1,17 +1,26 @@
 // HEADER
 ///////////////////////////
 
+// Variables
+///////////////////////////
+
+
+// Main
+///////////////////////////
+
 .header {
 	background-color: $COLOR-Primary;
 	color: $COLOR-Secondary;
 	@include padding($Body-LineHeight);
 }
-// Variables
-///////////////////////////
-// Main
-///////////////////////////
+
 // Elements
 ///////////////////////////
+
+.header__top {
+	@include flex(row, space-between, center)
+}
+
 // Variants
 ///////////////////////////
 // Media Queries
