main page bg images, locations page

--- a/src/app/_components/public/home/home.component.html
+++ b/src/app/_components/public/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="page home">
+<div class="page page--home">
   <app-skewed-wrapper [full]="false">
       <div class="item">
           <header class="item__header">
