--- a/src/app/_components/public/tips/tips.component.html
+++ b/src/app/_components/public/tips/tips.component.html
@@ -1,9 +1,8 @@
-<div class="page tips">
-  <div class="with-aside skewed--full bg bg--opaque">
-    <article class=" skewed__content">
+<div class="page page--tips">
+  <app-skewed-wrapper [full]="true">
+    <div class="item">
       <h1 class="heading">Tips and Advice</h1>
-      <p>A blocked drain is inconvenient and can be costly, smells, possible flooding and in some cases health hazards. We here at Bristol Faster Drains are always available 24 hours a day, 7 days a week. However, hear are a few handy hints to hopefully
-        help you not need us.</p>
+      <p>A blocked drain is inconvenient and can be costly, smells, possible flooding and in some cases health hazards. We here at Bristol Faster Drains are always available 24 hours a day, 7 days a week. However, hear are a few handy hints to hopefully help you not need us.</p>
       <ul class="hints">
         <li>
           Do not flush away disposable items, particularly if they are insoluble. Wet wipes, nappies and sanitary items are some of the biggest causes of drain problems. They can cause blocked toilets.
@@ -30,7 +29,6 @@
           Whilst rodding your own drains is cost effective, make sure you use good quality drain rods, many of our call outs are due to snapped rods getting stuck and causing blockages.
         </li>
       </ul>
-    </article>
-  </div>
-  <app-policies class="aside"></app-policies>
+    </div>
+  </app-skewed-wrapper>
 </div>
