--- a/src/scss/components/__index.scss
+++ b/src/scss/components/__index.scss
@@ -5,7 +5,7 @@
 @import 'list';
 @import 'loader';
 @import 'nav';
-@import 'page';
+@import 'phone';
 @import 'skewed-bg';
 @import 'star-rating';
 @import 'star-input';
