--- a/src/scss/modules/__index.scss
+++ b/src/scss/modules/__index.scss
@@ -1,6 +1,7 @@
 @import 'header';
 @import 'footer';
-@import 'home';
+@import 'page';
+@import 'item';
 @import 'article';
 @import 'services';
-@import 'item';
+@import 'home';
