mobile nav styling

--- a/src/app/_components/shared/header/header.component.html
+++ b/src/app/_components/shared/header/header.component.html
@@ -7,5 +7,7 @@
     </div>
     <app-phone-numbers></app-phone-numbers>
   </div>
-  <app-nav class="nav nav--main"></app-nav>
+  <div class="header__nav">
+      <app-nav class="nav nav--main"></app-nav>
+  </div>
 </header>
