--- a/src/app/_components/shared/nav/nav.component.html
+++ b/src/app/_components/shared/nav/nav.component.html
@@ -1,21 +1,39 @@
 <nav>
   <ul class="list list--nav nav__links">
-    <li class="list__item nav__item">
+    <li class="list__item nav__item"
+      [routerLinkActive]="['active']"
+      [routerLinkActiveOptions]="{exact:true}"
+    >
       <a class="nav__link" [routerLink]="['/services']">Services</a>
     </li>
-    <li class="list__item nav__item">
+    <li class="list__item nav__item"
+      [routerLinkActive]="['active']"
+      [routerLinkActiveOptions]="{exact:true}"
+    >
       <a class="nav__link" [routerLink]="['/testimonials']">Testimonials</a>
     </li>
-    <li class="list__item nav__item">
+    <li class="list__item nav__item"
+      [routerLinkActive]="['active']"
+      [routerLinkActiveOptions]="{exact:true}"
+    >
       <a class="nav__link" [routerLink]="['/tips']">Hints &amp; Tips</a>
     </li>
-    <li class="list__item nav__item">
+    <li class="list__item nav__item"
+      [routerLinkActive]="['active']" 
+      [routerLinkActiveOptions]="{exact:true}"
+    >
       <a class="nav__link" [routerLink]="['/locations']">Locations</a>
     </li>
-    <li class="list__item nav__item">
+    <li class="list__item nav__item"
+      [routerLinkActive]="['active']" 
+      [routerLinkActiveOptions]="{exact:true}"
+    >
       <a class="nav__link" [routerLink]="['/contact']">Contact</a>
     </li>
-    <li class="list__item nav__item">
+    <li class="list__item nav__item"
+      [routerLinkActive]="['active']" 
+      [routerLinkActiveOptions]="{exact:true}"
+    >
       <a class="nav__link" [routerLink]="['/blogs']">Blog</a>
     </li>
   </ul>
