Services landing page

--- a/src/scss/_config/variables/_variables.scss
+++ b/src/scss/_config/variables/_variables.scss
@@ -41,6 +41,7 @@ $FontWeight-Thin: 300;
 $BP-Smallest:		340px;
 $BP-Small:			480px;
 $BP-Med:				670px;
+$BP-MedLg:			850px;
 $BP-Large:			1024px;
 $BP-Larger:			1400px;
 $BP-Largest:		1700px;
