--- a/src/scss/modules/_page.scss
+++ b/src/scss/modules/_page.scss
@@ -12,7 +12,7 @@ $Page-Padding:			$Type-LineHeight;
 ///////////////////////////
 
 .page {
-	height: 100%;
+	// height: 100%;
 	min-height: $Page-MinHeight;
 }
 
